--- a/views/_partials/_footer_navigation.erb
+++ b/views/_partials/_footer_navigation.erb
@@ -1,4 +1,4 @@
-<div class="newsletter-navigation">
+<div class="footer-navigation">
 <ul class="nav-list">
     <li class="nav-item">
         <a class="nav-link" href="/newsletter">Newsletter archive</a>
