--- a/views/_partials/_footer_navigation.erb
+++ b/views/_partials/_footer_navigation.erb
@@ -1,7 +1,10 @@
 <div class="footer-navigation">
 <ul class="nav-list">
     <li class="nav-item">
-        <a class="nav-link" href="/newsletter">Newsletter archive</a>
+        <a class="nav-link" href="#">First CLP Website</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Second CLP Website</a>
     </li>
 </ul>
 </div>
