--- a/views/ward_spotlight.erb
+++ b/views/ward_spotlight.erb
@@ -1,19 +1,24 @@
-<div class="newsletter-page">
+<div class="ward-spotlight-page">
 
     <div class="header-container">
-        <h1 class="page-header">Newsletter</h1>
-
-        <p class="page">Signup to my newsletter</p>
-
-
+        <img class="map-of-westminster" src="/assets/westminster.png" alt="Map of Westminster">
+        <%= erb :'_partials/_ward_finder_box' %>
+        <%= erb :'_partials/_ward_content' %>
+        <h2 class="secondary-header">“We believe in open access and transparency”</h2>
+        <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+        <h2 class="secondary-header">How we have spent our ward budgets this year and in past years</h2>
+        <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+        <h2 class="secondary-header">Key local priorities and challenges</h2>
+        <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+        <h2 class="secondary-header">Sign up for ward action reports</h2>
         <div class="form-container">
             <form>
                 <div class="input-container half-container">
-                    <label class="label">First Name</label>
+                    <label class="label">Name</label>
                     <input class="input" type="text">
                 </div>
                 <div class="input-container half-container">
-                    <label class="label">Last Name</label>
+                    <label class="label">Phone</label>
                     <input class="input" type="text">
                 </div>
                 <div class="input-container half-container">
@@ -21,20 +26,17 @@
                     <input class="input" type="text">
                 </div>
                 <div class="input-container half-container">
-                    <label class="label">Mobile phone</label>
+                    <label class="label">Address</label>
                     <input class="input" type="text">
                 </div>
                 <div class="input-container">
-                    <label class="label">Postcode and/or full address</label>
-                    <input class="input" type="text">
-                </div>
-                <div class="input-container">
-                    <label class="label">Country</label>
-                    <input class="input" type="text">
+                    <label class="label">Comments</label>
+                    <textarea class="input" placeholder="Tell us about anything we need to know about">
+                    </textarea>
                 </div>
 
                 <div class="input-container">
-                    <input class="red-button" type="submit" value="Search">
+                    <input class="red-button" type="submit" value="Submit">
                 </div>
 
             </form>
