elections and campaign pages

--- a/views/elections.erb
+++ b/views/elections.erb
@@ -1,42 +1,18 @@
 <div class="offering-help-page">
 
     <div class="header-container">
-        <h1 class="page-header">Offering help</h1>
-        <h2 class="secondary-header">What sort of help is on offer</h2>
+        <h1 class="page-header">Chance to swing the council and send a clear message</h1>
         <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
         <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
         <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-        <h2 class="secondary-header">Comments</h2>
-        <div class="form-container">
-            <form>
-                <div class="input-container half-container">
-                    <label class="label">Name</label>
-                    <input class="input" type="text">
-                </div>
-                <div class="input-container half-container">
-                    <label class="label">Phone</label>
-                    <input class="input" type="text">
-                </div>
-                <div class="input-container half-container">
-                    <label class="label">Email</label>
-                    <input class="input" type="text">
-                </div>
-                <div class="input-container half-container">
-                    <label class="label">Address</label>
-                    <input class="input" type="text">
-                </div>
-                <div class="input-container">
-                    <label class="label">Comments</label>
-                    <textarea class="input" placeholder="Tell us about anything we need to know about">
-                    </textarea>
-                </div>
-
-                <div class="input-container">
-                    <input class="red-button" type="submit" value="Submit">
-                </div>
-
-            </form>
-        </div>
+        <h2 class="secondary-header">Previous council elections</h2>
+        <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+        <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+        <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+        <h2 class="secondary-header">Other elections</h2>
+        <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+        <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+        <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
     </div>
 </div>
 
