--- a/views/_partials/_main_navigation.erb
+++ b/views/_partials/_main_navigation.erb
@@ -15,7 +15,7 @@
             <li class="nav-item"><a class="nav-link" href="/who-we-are">Who we are</a></li>
             <li class="nav-item"><a class="nav-link" href="/ward-spotlight">Ward spotlight</a></li>
             <li class="nav-item"><a class="nav-link" href="/elections">Elections</a></li>
-            <li class="nav-item"><a class="nav-link" href="/campaigns">Needing help</a></li>
+            <li class="nav-item"><a class="nav-link" href="/campaigns">Campaigns</a></li>
             <li class="nav-item"><a class="nav-link" href="/links">Links</a></li>
         </ul>
 
