updated links page

--- a/views/links.erb
+++ b/views/links.erb
@@ -3,13 +3,13 @@
         <h1 class="page-header">Links</h1>
         <ul class="links-list">
             <li>
-                <a class="link" href="/#">Labour group</a>
+                <a class="link" href="/#">Karen Buck M.P.</a>
             </li>
             <li>
-                <a class="link" href="/#">CLP</a>
+                <a class="link" href="/#">2 Cities candidates</a>
             </li>
             <li>
-                <a class="link" href="/#">2 Cities CLP</a>
+                <a class="link" href="/#">WCC</a>
             </li>
             <li>
                 <a class="link" href="/#">Lorem ipsum dolar sit amet</a>
