--- a/views/campaigns.erb
+++ b/views/campaigns.erb
@@ -3,6 +3,8 @@
     <div class="header-container">
 
         <h1 class="page-header">Top 5 pan-Westminster issues</h1>
+        <div class="sidebar-container">
+            <%= erb :'_partials/_sidebar' %>
         <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
         <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
         <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
@@ -32,6 +34,7 @@
         <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
 
         <a hreef="#" class="red-button">How to help</a>
+            </div>
 
     </div>
 </div>
