--- a/views/links.erb
+++ b/views/links.erb
@@ -1,6 +1,8 @@
 <div class="links-page">
     <div class="header-container">
         <h1 class="page-header">Links</h1>
+        <div class="sidebar-container">
+            <%= erb :'_partials/_sidebar' %>
         <ul class="links-list">
             <li>
                 <a class="link" href="/#">Karen Buck M.P.</a>
@@ -29,7 +31,9 @@
             <li>
                 <a class="link" href="/#">Ut enim ad minim veniam</a>
             </li>
+
         </ul>
+            </div>
     </div>
 </div>
 
