--- a/views/ward_spotlight.erb
+++ b/views/ward_spotlight.erb
@@ -4,6 +4,8 @@
         <img class="map-of-westminster" src="/assets/westminster.png" alt="Map of Westminster">
         <%= erb :'_partials/_ward_finder_box' %>
         <%= erb :'_partials/_ward_content' %>
+        <div class="sidebar-container">
+            <%= erb :'_partials/_sidebar' %>
         <h2 class="secondary-header">“We believe in open access and transparency”</h2>
         <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
         <h2 class="secondary-header">How we have spent our ward budgets this year and in past years</h2>
@@ -41,6 +43,7 @@
 
             </form>
         </div>
+            </div>
 
     </div>
 </div>
