--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -59,6 +59,10 @@
     margin: 5px 0;
   }
 
+  .sidebar-container {
+    position: relative;
+  }
+
 }
 
 @include respond-to(tablet) {
@@ -73,6 +77,9 @@
     .column {
       width: 50%;
       float: left;
+    }
+    .sidebar-container {
+      padding-right: 240px;
     }
   }
 }
