--- a/views/who_we_are.erb
+++ b/views/who_we_are.erb
@@ -2,6 +2,9 @@
     <div class="header-container">
         <h1 class="page-header">Who we are</h1>
 
+        <div class="sidebar-container">
+            <%= erb :'_partials/_sidebar' %>
+
         <h2 class="secondary-header">Lancaster Gate Ward</h2>
 
         <%= erb :'_partials/_councillor_list' %>
@@ -64,6 +67,7 @@
 
 
         </div>
+            </div>
 
 
     </div>
